# remote-technical-interview-preparation

./: README.md
python-smoketest/: README.md  pyproject.toml
python-smoketest/smoketest/: hello.py
python-smoketest/tests/: test_hello.py
